Update compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       build: ./app
       container_name: ${PROJECT_NAME}-django
       command: gunicorn first_project.wsgi:application --bind 0.0.0.0:8000
+      command: bash -c "python manage.py makemigrations && python manage.py test polls"
       volumes:
         - ./app:/app
         - static_volume:/app/static
