--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
     - docker ps
 
 
-script:
-    - docker-compose run django python manage.py test polls
+# script:
+#     - docker-compose run django python manage.py test polls
 
